# opensense

./: .env.ingest.example  .gitignore  =2.9.0  AGENTS.md  CONTRIBUTING.md  DATABASE_README.md  Dockerfile  E2E_IMPLEMENTATION_SUMMARY.md  INGEST_README.md  Makefile  PUBLISHING.md  README.md  SERVER_PATH.md  database_creation.py  demo_features.py  demo_schema_registry.py  docker-compose.test.yml  docker-compose.yml  for grouping  pyproject.toml  test_database_creation.py  test_database_integration.py  test_subject_bug.py
.github/workflows/: copilot-setup-steps.yml  e2e-tests.yml
docs/: CONTEXT.md
frontend/: README.md  build.sh  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  ConsoleApp.tsx  Dashboard.tsx  Demo.test.tsx  Demo.tsx  DemoApp.tsx  Events.tsx  IngestMapping.tsx  Prompts.tsx  Schema.tsx  Sidebar.tsx  Subscriptions.tsx  apiUtils.ts  index.css  index.tsx  sampleWebhookPayloads.ts
langhook/: __init__.py  app.py  main.py
langhook/cli/: dlq_show.py  stream_manager.py  topic_manager.py
langhook/core/: config.py  fastapi.py  kafka.py  nats.py
langhook/ingest/: config.py  kafka.py  middleware.py  nats.py  security.py
langhook/map/: cloudevents.py  config.py  fingerprint.py  jsonata_generator.py  kafka.py  llm.py  mapper.py  metrics.py  nats.py  service.py
langhook/router/: config.py
langhook/subscriptions/: __init__.py  auth.py  budget.py  config.py  consumer_service.py  database.py  gate.py  llm.py  models.py  nlp.py  prompts.py  routes.py  schema_registry.py  schemas.py
langhook/tests/: test_client.py  test_integration.py  test_live_integration.py
mappings/: github.jsonata
opensense/: __init__.py  app.py  main.py
opensense/cli/: __init__.py  dlq_show.py  topic_manager.py
opensense/core/: __init__.py  fastapi.py  kafka.py
opensense/ingest/: __init__.py  app.py  config.py  kafka.py  main.py  middleware.py  security.py
opensense/map/: __init__.py  app.py  cloudevents.py  config.py  kafka.py  llm.py  main.py  mapper.py  metrics.py  service.py
opensense/router/: __init__.py  config.py
prompts/: gate_templates.yaml  mapping_templates.yaml  subscription_templates.yaml
schemas/: canonical_event_v1.json
scripts/: build-frontend.sh  build-packages.sh  init-streams.sh  init-topics.sh  publish-server.sh  run-e2e-tests.sh  test-packages.py
sdk/: README.md
sdk/python/: __init__.py  pyproject.toml
sdk/typescript/: package-lock.json  package.json
server/: __init__.py  app.py  main.py  pyproject.toml
server/cli/: dlq_show.py
server/ingest/: config.py  kafka.py  middleware.py  nats.py  security.py
server/langhook/: __init__.py  app.py  main.py
server/map/: config.py  kafka.py  llm.py  mapper.py  nats.py  service.py
server/router/: config.py
server/subscriptions/: config.py  consumer_service.py  database.py  dlq_logging.py  event_logging.py  gate.py  llm.py  routes.py  schema_registry.py  schema_routes.py
server/tests/: test_app.py  test_dlq_integration.py  test_dlq_logging.py  test_event_logging.py  test_event_logging_enabled.py  test_ingest_mapping_delete.py  test_llm_gate.py  test_llm_gate_e2e.py  test_llm_schema_integration.py  test_mapping_schema_integration.py  test_optional_webhook.py  test_schema_api.py  test_schema_creation_behavior.py  test_schema_deletion_api.py  test_schema_registry.py  test_subscription_gate_integration.py  (+1 more)
tests/: __init__.py  test_app.py  test_frontend_api_paths.py  test_frontend_router.py  test_llm_gate.py  test_llm_gate_e2e.py  test_llm_schema_integration.py  test_mapping_schema_integration.py  test_optional_webhook.py  test_original_issue_reproduction.py  test_repository_filtering_improvement.py  test_resource_type_filtering.py  test_schema_api.py  test_schema_registry.py  test_server_path.py  test_stream_not_found_fix.py  test_subscription_channel_type_issue.py  test_subscription_gate_integration.py  test_subscription_schema_validation.py
web/: README.md  package-lock.json
(+67 files in other folders)
