[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langhook"
version = "0.1.0"
description = "LangHook Python SDK - Client library for connecting to LangHook servers"
readme = "README.md"
license = {file = "../../LICENSE"}
authors = [
    {name = "LangHook Team", email = "team@langhook.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/touchaponk/langhook"
Repository = "https://github.com/touchaponk/langhook"
Issues = "https://github.com/touchaponk/langhook/issues"
Documentation = "https://github.com/touchaponk/langhook/tree/main/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]